<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>

        <variable
            name="view_model"
            type="com.acarrell.urbandictionary.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_term_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_term"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={view_model.searchText}"
                app:boxStrokeColor="@color/colorPrimaryDark"
                android:lines="1"
                android:maxLines="1"
                android:imeOptions="actionGo" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search_btn"
            app:layout_constraintEnd_toStartOf="@+id/sort_button"
            app:layout_constraintStart_toEndOf="@+id/search_term_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/entries_list"
            android:onClick="@{() -> view_model.search()}"/>

        <ImageButton
            android:id="@+id/sort_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sort_by_thumbs_up"
            android:src="@drawable/ic_thumbs_up_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/search_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/entries_list"
            android:onClick="@{() -> view_model.sortEntries()}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/entries_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:adapter="@{view_model.adapter}"
            app:data="@{view_model.data}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_term_container" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            app:layout_constraintTop_toTopOf="@id/entries_list"
            app:layout_constraintBottom_toBottomOf="@id/entries_list"
            app:layout_constraintStart_toStartOf="@id/entries_list"
            app:layout_constraintEnd_toEndOf="@id/entries_list"
            android:visibility="@{view_model.showProgress ? View.VISIBLE : View.GONE}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
